AFS_Dev/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Consulting_End_Date__c</fullName>
        <formula>If (Type_of_Work__c=&apos;Consulting&apos;, Opportunity.Consulting_End__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consulting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Start_Date__c</fullName>
        <formula>If (Type_of_Work__c=&apos;Consulting&apos;,Opportunity.Consulting_Start__c,null)</formula>
        <label>Consulting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Components_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Components N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW_SW_Costs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Does not apply to BPO
Fields required to enter stage 2A and beyond</inlineHelpText>
        <label>HW/SW Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OI_Value__c</fullName>
        <formula>Revenue__c  -   Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OI Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OI__c</fullName>
        <formula>IF(OR(Revenue__c = 0, ISBLANK( Revenue__c )) , 0,  OI_Value__c  /Revenue__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OI%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Components__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This applies to Consulting ToW ONLY and includes costs such as: Airfare, Hotel, Industrial Funding Fee, Contract Access Fee, etc.
Fields required to enter stage 2A and beyond</inlineHelpText>
        <label>Other Cost Components</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outsourcing_End_Date__c</fullName>
        <formula>If (Type_of_Work__c=&apos;Outsourcing&apos;,Opportunity.Outsourcing_End__c,null)</formula>
        <label>Outsourcing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outsourcing_Start_Date__c</fullName>
        <formula>If (Type_of_Work__c=&apos;Outsourcing&apos;,Opportunity.Outsourcing_Start__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outsourcing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>TCR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Group_Text__c</fullName>
        <label>Service Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Expenses__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This applies to Consulting ToW ONLY
Fields required to enter stage 2A and beyond</inlineHelpText>
        <label>Subcontractor Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Difference__c</fullName>
        <formula>IF( OI__c = 0, 0, OI__c -  Target_OI__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Difference%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_OI_Temp_Calc__c</fullName>
        <label>Target OI Temp Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_OI__c</fullName>
        <label>Target OI%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <inlineHelpText>This includes both direct &amp; indirect costs</inlineHelpText>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Service Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Work__c</fullName>
        <label>Type of Work</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Consulting_Date_is_Required</fullName>
        <active>true</active>
        <description>If Service Group = TC/MC/SI, Consulting Start/End date are required on the Opportunity or else the TC/MC/SI product cannot be saved.</description>
        <errorConditionFormula>AND
(
Type_of_Work__c = &apos;Consulting&apos;, 
OR
(
ISBLANK(Opportunity.Consulting_Start__c),
ISBLANK(Opportunity.Consulting_End__c)
)
)</errorConditionFormula>
        <errorMessage>FIN-008: You must enter Consulting Start/End Dates on the opportunity before creating MC, SI or TC service group Financial Detail records. Please populate these fields on the opportunity and save your changes to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Components_do_not_apply_to_BPO</fullName>
        <active>true</active>
        <description>If Service Group = BPO, then cost component fields HW/SW, SubK, Other cannot have any value other than 0 or NULL as they do not apply to BPO</description>
        <errorConditionFormula>AND (
TEXT(PricebookEntry.Product2.Type__c)  = &apos;02 - BPO&apos;,
OR(
HW_SW_Costs__c &lt;&gt; null || HW_SW_Costs__c &gt; 0,
Subcontractor_Expenses__c &lt;&gt; null || Subcontractor_Expenses__c &gt; 0,
Other_Cost_Components__c &lt;&gt; null || Other_Cost_Components__c &gt; 0 
)
)</errorConditionFormula>
        <errorMessage>FIN-001: Cost components (HW/SW Costs, Subcontractor Expenses, Other Cost Components) do not apply to the BPO service group. Please delete data in these fields and check the &quot;Cost Components N/A&quot; checkbox to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Components_should_be_0_or_null</fullName>
        <active>true</active>
        <description>If Cost Component N/A = TRUE, then HW/SW, SubK and Other must = 0 or NULL</description>
        <errorConditionFormula>AND 
( 
Cost_Components_N_A__c = TRUE, 
OR( 
HW_SW_Costs__c &lt;&gt; null || HW_SW_Costs__c &gt; 0, 
Subcontractor_Expenses__c &lt;&gt; null || Subcontractor_Expenses__c &gt; 0, 
Other_Cost_Components__c &lt;&gt; null || Other_Cost_Components__c &gt; 0 
) 
)</errorConditionFormula>
        <errorMessage>FIN-004: Sum of cost components must equal 0 when &quot;Cost Components N/A&quot; checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Outsourcing_Date_is_Required</fullName>
        <active>true</active>
        <description>If Service Group = BPO/AO/IO, Outsourcing Start/End date is required on the Opportunity or else the BPO/AO/IO product cannot be saved.</description>
        <errorConditionFormula>AND
(
  Type_of_Work__c   = &apos;Outsourcing&apos;,
OR
(
ISBLANK( Opportunity.Outsourcing_Start__c ),
ISBLANK(Opportunity.Outsourcing_End__c)
)
)</errorConditionFormula>
        <errorMessage>FIN-007: You must enter Outsourcing Start/End Dates on the opportunity before creating AO, IO or BPO service group Financial Detail records. Please populate these fields on the opportunity and save your changes to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revenue_is_required</fullName>
        <active>true</active>
        <description>Revenue is a required field. Please populate this field to proceed.</description>
        <errorConditionFormula>AND(
TEXT( Opportunity.Hierarchy_Level__c ) &lt;&gt; &quot;Contract Vehicle&quot;,
ISBLANK( Revenue__c ) 
)</errorConditionFormula>
        <errorMessage>FIN-006: TCR is a required field. Please populate this field to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Exp_and_Other_Cost_is_not_applicable</fullName>
        <active>true</active>
        <description>If Service Group = AO/IO, then SubK and Other fields cannot have any value other than 0 or NULL as they do not apply to AO/IO</description>
        <errorConditionFormula>AND (
TEXT(PricebookEntry.Product2.Type__c)  = &apos;01 - AO&apos; || TEXT(PricebookEntry.Product2.Type__c)  = &apos;03 - IO&apos; ,
OR(
Subcontractor_Expenses__c &lt;&gt; null || Subcontractor_Expenses__c &gt; 0,
Other_Cost_Components__c &lt;&gt; null || Other_Cost_Components__c &gt; 0 
)
)</errorConditionFormula>
        <errorMessage>FIN-002: Subcontractor Expenses and Other Cost Components fields do not apply to Outsourcing service groups. Please delete data in these fields to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sum_of_Cost_Comp_cannot_be_greater_TC</fullName>
        <active>true</active>
        <description>Sum of cost components (HW/SW costs, Subcontractor Expenses, Other Cost Components) cannot be greater than Total Costs.</description>
        <errorConditionFormula>(NULLVALUE(HW_SW_Costs__c , 0) +  NULLVALUE(Subcontractor_Expenses__c  , 0) +  NULLVALUE(Other_Cost_Components__c, 0)) &gt;  NULLVALUE(Total_Costs__c,0)</errorConditionFormula>
        <errorMessage>FIN-005: Sum of cost components (HW/SW costs, Subcontractor Expenses, Other Cost Components) cannot be greater than Total Costs.</errorMessage>
    </validationRules>
</CustomObject>